# OpenCVTest

./: .project  README.md  build.gradle  gradle.properties  import-summary.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lxzh123/opencvtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lxzh123/opencvtest/: MainActivity.java
app/src/main/java/com/lxzh123/opencvtest/facedetect/: DetectionBasedTracker.java  FdActivity.java
app/src/main/jni/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
app/src/test/java/com/lxzh123/opencvtest/: ExampleUnitTest.java
opencvlib/: build.gradle
opencvlib/src/main/: AndroidManifest.xml
